--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Weaknesses of Nightshade</title>
+  <title>Nightshade Network | Support & More</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
+      background-color: #1a1a1a;
+      color: #f0f0f0;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -20,6 +21,13 @@
     }
     #redirect-message {
       margin-top: 20px;
+    }
+    a {
+      color: #00b8d4;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -44,6 +52,5 @@
     }, 1000);
   </script>
   <p style="font-size:12px;">If you are not redirected within the allocated time, <a href="https://discord.gg/ugNMC9e4E6">click here.</a></p>
-
 </body>
 </html>
