--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
       }
     }, 1000);
   </script>
-  <p style="font-size:12px;">If you are not redirected within the allocated time, <a href="https://discord.gg/ugNMC9e4E6">click here.</a></p>
+  <br><p style="font-size:12px;">If you are not redirected within the allocated time, <a href="https://discord.gg/ugNMC9e4E6">click here.</a></p>
 </body>
 </html>
